<resources>
    <string name="app_name">NewAdmin</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_a_registered_user_login">Not a Registered User? Login.</string>
    <string name="logout">Logout</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="appointments">Appointments</string>
    <string name="blog">Blog\n</string>
</resources>